# password-manager-desktop

./: package-lock.json  package.json
src/: App.tsx  api.ts  main.tsx
src-tauri/: .env  Cargo.toml  passwords.csv  tauri.conf.json
src-tauri/migrations/2025-06-29-222908_change_passwords_to_bytea/: down.sql  up.sql
src-tauri/migrations/2025-07-03-063257_remove_key_constraint_and_add_uri/: down.sql  up.sql
src-tauri/src/: main.rs  schema.rs
src/components/: Button.tsx  FormInput.tsx  GeneratorPage.tsx  Header.tsx  MenuButton.tsx  Modal.tsx  PasswordGenerator.tsx  Sidebar.tsx
src/context/: AuthContext.tsx
src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
