[package]
name = "password-manager-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "password_manager_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-opener = "2"

tauri = { version = "2.6.0", features = ["wry"] }
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] } 
axum = "0.7"                                      
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"    
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] } # Asynchronous SQL database driver
dotenvy = "0.15"   
argon2 = "0.5" # For password hashing
rand_core = { version = "0.6", features = ["std"] } # Dependency for argon2                             
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] } # For handling timestamps in JWT claims

axum-extra = { version = "0.10.1", features = ["typed-header"] } # For TypedHeader extractor
uuid = { version = "1.17.0", features = ["v4", "serde"] } # Ensure uuid is updated and has "serde" feature for JSON
rand = "0.9.1"
rand_distr = "0.5.1"


diesel = { version = "2.2.10", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.5.0", features = ["tokio", "deadpool", "postgres"] }

deadpool = { version = "0.12.2", features = ["rt_tokio_1"] }
tower-http = { version = "0.6.6", features = ["cors"] }


